# Qlift

./: .gitignore  README.md
Rule-Library/: DEMO_WALKTHROUGH.md  Makefile  pyproject.toml
Rule-Library/rules/: RULE_TEMPLATE.yaml
Rule-Library/rules/oracle-to-bigquery/architectural/: cursor_patterns.yaml  ddl_objects.yaml
Rule-Library/rules/oracle-to-bigquery/direct_swaps/: datetime_functions.yaml  null_handling.yaml  set_and_misc.yaml  string_functions.yaml
Rule-Library/rules/oracle-to-bigquery/structural/: structural_patterns.yaml
Rule-Library/rules/oracle-to-bigquery/type_mapping/: type_mapping.yaml
Rule-Library/rules/shared/bigquery/: bigquery_patterns.yaml
Rule-Library/tests/: conftest.py  test_acceptance_criteria.py  test_all_rules_coverage.py  test_architectural.py  test_direct_swaps.py  test_rigorous_validation.py  test_rule_schema.py  test_shared.py  test_structural.py  test_type_mapping.py
Target-Adapter/: DEMO_PRESENTATION_GUIDE.md  QLift_Simple_Flowchart.md  QLift_Target_E2E_Flowchart_Demo.md
Target-Adapter/.claude/: settings.local.json
Target-Adapter/qlift/TA-02/bigquery/: __init__.py  ddl_generator.py  type_mapping.py
